--- a/index.html
+++ b/index.html
@@ -11,107 +11,30 @@
 	</head>
 
     <!--Body-->
-	<body class="index is-preload">
+	<body class="loadingPage">
         <!--Message-->
-        <header class="special container">
-            <img src="../images/asg-logo.png" alt="" /></a>
-            <h2><strong>Welcome</strong>
-        </h2>
-            <p>Redirecting to Home page...</p>
-            <p>If you are not automatically redirected,</p>
-            <p>please try the button below.</p>
-            <a href="../home" class="button primary">Home</a>
-        </header>
-
-        <!--Footer-->
-        <footer id="footer">
-            <!-- Contact -->
-            <section class="wrapper style1 container special">
-                <div class="row">
-                    <div class="col-4 col-12-narrower">
-                        <section>
-                            <header>
-                                <h3><strong>We're on call 24/7</strong></h3>
-                            </header>
-                            <p id="overide-center" class="row aln-center">
-                                <span class="icon solid fa-phone"></span>
-                                <a class="no-border" href="tel:+19176931708">(917) 693-1708</a>
-                            </p>
-                        </section>
-                    </div>
-                    <div class="col-4 col-12-narrower">
-                        <section>
-                            <header>
-                                <h3><strong>Hours of Operation</strong></h3>
-                            </header>
-                            <div id="overide-center" class="row aln-center">
-                                <span class="icon solid fa-clock"></span>
-                                <p>Mon-Fri 8:00 AM - 9:00 PM
-                                Sat-Sun 10:00 AM - 6:00 PM</p>
-                            </div>
-                        </section>
-                    </div>
-                    <div class="col-4 col-12-narrower">
-                        <section>
-                            <header>
-                                <h3><strong>E-mail</strong></h3>
-                            </header>
-                            <p id="overide-center" class="row aln-center">
-                                <span class="icon solid fa-envelope"></span>
-                                <a  class="no-border" href="mailto:gelmuscleaning@gmail.com">gelmuscleaning@gmail.com</a>
-                            </p>
-                        </section>
-                    </div>
-                </div>
-                <hr>
-            </section>
-            <!-- Services -->
-             <div class="border-top-bot">
-                <h2><strong>Our Services</strong></h2>
-                <section class="wrapper style1 container special">
-                    <div class="row">
-                        <div class="col-4 col-12-narrower">
-
-                            <section>
-                                <p id="overide-center">Tile & Grout Cleaning</p>
-                                <p id="overide-center">Move In/Move Out Cleaning</p>
-                            </section>
-
-                        </div>
-                        <div class="col-4 col-12-narrower">
-
-                            <section>
-                                <p id="overide-center">Window Cleaning</p>
-                                <p id="overide-center">Deep Cleaning</p>
-                            </section>
-
-                        </div>
-                        <div class="col-4 col-12-narrower">
-
-                            <section>
-                                <p id="overide-center">Eco/Green Cleaning</p>
-                                <p id="overide-center">Maid Services</p>
-                            </section>
-
-                        </div>
-                    </div>
-                </section>
-            </div>
-
-            <!-- Social -->
-            <ul class="icons">
-                <li><a href="https://www.yelp.com/biz/gelmus-cleaning-new-york-2?hrid=u6k4bo56iasPn6sow0XlcA&utm_campaign=header&utm_medium=embedded_review&utm_source=localhost" target="_blank" rel="noopener noreferrer" class="icon brands circle fa-yelp"><span class="label">Yelp</span></a></li>
-                <li><a href="https://www.facebook.com/Gelmu2" target="_blank" rel="noopener noreferrer" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
-            </ul>
-            <!-- Copyright -->
-            <ul class="copyright">
-                <li>&copy; All rights reserved, Gelmu's Cleaning 2024</li></li>
-            </ul>
-
-            <ul class="copyright">
-                <li>Design: <a class="no-border" href="http://html5up.net" target="_blank" rel="noopener noreferrer">HTML5 UP</a></li><li>Build: <a class="no-border" href="http://suwanshree.com" target="_blank" rel="noopener noreferrer">Suwanshree Acharya</a></li>
-            </ul>
-
-        </footer>
+        <div class="logoLoading">
+            <a class="no-border" href="../home"><img src="../images/asg-logo.png" alt="" /></a>
+            <div class="loader"></div>
+        </div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <script>
+            document.querySelectorAll('.bubble').forEach((bubble) => {
+                const randomX = Math.random(); // Random horizontal positioning
+                const randomY = Math.random(); // Random vertical positioning
+                const randomDelay = Math.random() * 3; // Random delay between 0 and 3 seconds
+                bubble.style.setProperty('--random-x', randomX);
+                bubble.style.setProperty('--random-y', randomY);
+                bubble.style.animationDelay = `${randomDelay}s`; // Assign random delay
+            });
+          </script>
     </body>
 </html>
