--- a/services/index.html
+++ b/services/index.html
@@ -63,7 +63,7 @@
 								<section>
 									<p href="#" class="image featured"><img src="../images/gelmu1.jpg" alt="" /></p>
 									<header>
-										<h3><strong>Standard Cleaning</strong></h3>
+										<h2><strong>Standard Cleaning</strong></h2>
 									</header>
 									<p id="overide-left-align">Standard cleaning involves routine tasks to maintain basic cleanliness in a home or office. These tasks include:</p>
 									<ul id="overide-left-align">
@@ -75,6 +75,67 @@
 										<li>Emptying trash</li>
 										<li>Tidying up</li>
 									</ul>
+									<header id="flex-row">
+										<p><img id="standard-icon" src="../assets/icons/bedroom.png" alt="" /></p>
+										<h3><strong>Bedroom</strong></h3>
+									</header>
+									<p id="overide-left-align"><strong>Clossets:</strong> Vacuumed
+										<strong>Cabinet:</strong> Dusted & wiped outer part
+										<strong>TV:</strong> Dusted
+										<strong>Lamps & Picture Frames:</strong> Dusted
+										<strong>Bed:</strong> Made
+										<strong>Carpet:</strong> Thoroughly vacuumed
+										<strong>Floor:</strong> Vacuumed & moped
+										<strong>Windows:</strong> Dusted interior
+										<strong>Ceiling fan:</strong> No touch
+										<strong>A/C unit:</strong> Dusted & wiped exterior
+										<strong>Doors & Door Knops:</strong> Dusted</p>
+										<header id="flex-row">
+											<p><img id="standard-icon" src="../assets/icons/bathroom.png" alt="" /></p>
+											<h3><strong>Bathroom</strong></h3>
+										</header>
+										<p id="overide-left-align"><strong>Floor:</strong> Thoroughly vacuumed and wet mopped
+											<strong>Cabinets:</strong> Exteriors dusted & wiped
+											<strong>Bathtub, tiles & sink:</strong> Washed and dried
+											<strong>Cosmetics supplies:</strong> No touch
+											<strong>Ventilator:</strong> No touch
+											<strong>Bathroom mirror:</strong> Glass cleaned
+											<strong>Shower glass:</strong> Washed and wiped dry
+											<strong>Shower head:</strong> No touch
+											<strong>Toilet bowl:</strong> Thoroughly cleaned
+											<strong>Toilet light bulbs:</strong> No touch
+											<strong>Doors and Door knobs:</strong> Dusted and wiped</p>
+											<header id="flex-row">
+												<p><img id="standard-icon" src="../assets/icons/living-room.png" alt="" /></p>
+												<h3><strong>Living Room</strong></h3>
+											</header>
+											<p id="overide-left-align"><strong>Couch:</strong> Exteriors and under cushions vacuumed
+												<strong>Under couch:</strong> If possible without moving couch, vacuumed
+												<strong>Tables:</strong> Dusted, wiped if requested
+												<strong>Cabinets:</strong> Exteriors dusted & wiped
+												<strong>Lamps & picture frames:</strong> Dusted
+												<strong>Carpets:</strong> Thoroughly vacuumed (top side)
+												<strong>Closets:</strong> Floors vacuumed & moped
+												<strong>TV:</strong> Dusted
+												<strong>Windows:</strong> Interior panes & window ledges dusted
+												<strong>Window treatments (Venetian blinds, drapes):</strong> No touch
+												<strong>Ceiling fan:</strong> No touch
+												<strong>A/C unit:</strong> Exterior of in-room portion of A/C unit dusted
+												<strong>Doors and Door knobs:</strong> Dusted</p>
+												<header id="flex-row">
+													<p><img id="standard-icon" src="../assets/icons/kitchen.png" alt="" /></p>
+													<h3><strong>Kitchen</strong></h3>
+												</header>
+												<p id="overide-left-align"><strong>Floor:</strong> Wet mopped (except under and behind refrigerator and other fixed appliances)
+													<strong>Cabinets:</strong> Exteriors dusted & wiped
+													<strong>Refrigerator:</strong> Exterior wiped, interior lightly cleaned
+													<strong>Stove:</strong> Top and front wiped
+													<strong>Oven:</strong> Exterior wiped
+													<strong>Microwave:</strong> Cleaned inside out
+													<strong>Sink:</strong> Thoroughly washed & dried
+													<strong>Dishwasher:</strong> Exterior wiped
+													<strong>Garbage Bin:</strong> Bag changed (bag to be supplied by client)
+													<strong>Ventilator:</strong> Dusted</p>
 								</section>
 
 							</div>
@@ -83,7 +144,7 @@
 								<section>
 									<p href="#" class="image featured"><img src="../images/gelmu6.jpg" alt="" /></p>
 									<header>
-										<h3><strong>Deep Cleaning</strong></h3>
+										<h2><strong>Deep Cleaning</strong></h2>
 									</header>
 									<p id="overide-left-align">Deep cleaning is a more thorough cleaning process aimed at eliminating dirt, grime, and other build-up that isn't typically addressed during a standard cleaning. This is usually done less frequently and includes:</p>
 									<ul id="overide-left-align">
@@ -94,6 +155,70 @@
 										<li><strong>Windows:</strong> Cleaning interior windows and sturdy blinds (excluding fragile or old blinds).</li>
 										<li><strong>Cabinets and Drawers:</strong> Cleaning the interiors of kitchen and bathroom cabinets and drawers.</li>
 									</ul>
+									<header id="flex-row">
+										<p><img id="standard-icon" src="../assets/icons/bedroom.png" alt="" /></p>
+										<h3><strong>Bedroom</strong></h3>
+									</header>
+									<p id="overide-left-align"><strong>Clossets:</strong> Cleaned inside out & reasonable organize
+										<strong>Cabinet:</strong> Dusted & wiped
+										<strong>TV:</strong> Dusted
+										<strong>Lamps & Picture Frames:</strong> Dusted & wiped
+										<strong>Beds:</strong> Make the bed & cleaned under if possible
+										<strong>Carpet:</strong> Thoroughly vacuumed
+										<strong>Floor:</strong> Vacuumed & moped
+										<strong>Windows:</strong> Cleaned Interior
+										<strong>Ceiling fan:</strong> Dusted & wiped if ladder is provided
+										<strong>A/C unit:</strong> Dusted & wiped
+										<strong>Ventilator:</strong> Dusted
+										<strong>Doors & Door Knops:</strong> Dusted & wiped</p>
+										<header id="flex-row">
+											<p><img id="standard-icon" src="../assets/icons/bathroom.png" alt="" /></p>
+											<h3><strong>Bathroom</strong></h3>
+										</header>
+										<p id="overide-left-align"><strong>Floor:</strong> Thoroughly vacuumed and wet mopped
+											<strong>Cabinets:</strong> Cleaned inside & out
+											<strong>Bathtub, tiles & sink:</strong> Mildew removed, surfaces washed and dried
+											<strong>Cosmetics supplies:</strong> Removed and cleaned, if requested
+											<strong>Ventilator:</strong> Dusted
+											<strong>Bathroom mirror:</strong> Glass cleaned
+											<strong>Shower glass:</strong> Washed and wiped dry
+											<strong>Shower curtain rod:</strong> Dusted & wiped
+											<strong>Shower head:</strong> Thoroughly washed & dried
+											<strong>Toilet bowl:</strong> Thoroughly cleaned
+											<strong>Toilet light bulbs:</strong> Dusted and wiped, if requested
+											<strong>Doors and Door knobs:</strong> Dusted and wiped</p>
+											<header id="flex-row">
+												<p><img id="standard-icon" src="../assets/icons/living-room.png" alt="" /></p>
+												<h3><strong>Living Room</strong></h3>
+											</header>
+											<p id="overide-left-align"><strong>Couch:</strong> Exteriors and under cushions vacuumed [mattress also vacuumed if sofa bed]
+												<strong>Under couch:</strong> If possible without moving couch, vacuumed and mopped
+												<strong>Tables:</strong> Dusted and if applicable, polished (furniture polish)
+												<strong>Cabinets:</strong> Dusted and wiped if requested
+												<strong>Lamps & picture frames:</strong> Dusted & front glass wiped
+												<strong>Open floor:</strong> Vacuumed to all corners and mopped
+												<strong>Carpets:</strong> Thoroughly vacuumed (top side, and bottom surfaces of area rugs not larger than 6’ x 8’)
+												<strong>Closets:</strong> Floors vacuumed & moped
+												<strong>TV:</strong> Dusted
+												<strong>Windows:</strong> Interior panes wiped with glass cleaner, window ledges dusted
+												<strong>Window treatments (Venetian blinds, drapes):</strong> No touch
+												<strong>Ceiling fan:</strong> Dusted if client provides access (appropriate steps to stand on)
+												<strong>A/C unit:</strong> Exterior of in-room portion of A/C unit dusted and wiped
+												<strong>Doors and Door knobs:</strong> Dusted and wiped</p>
+												<header id="flex-row">
+													<p><img id="standard-icon" src="../assets/icons/kitchen.png" alt="" /></p>
+													<h3><strong>Kitchen</strong></h3>
+												</header>
+												<p id="overide-left-align"><strong>Floor:</strong> Wet mopped under and behind refrigerator except other fixed appliances
+													<strong>Cabinets:</strong> Cleaned inside out
+													<strong>Refrigerator:</strong> Defrosted; exterior wiped, interior cleaned
+													<strong>Stove:</strong> Top and front wiped
+													<strong>Oven:</strong> Cleaned inside out
+													<strong>Microwave:</strong> Cleaned inside out
+													<strong>Sink:</strong> Thoroughly washed & dried
+													<strong>Dishwasher:</strong> Exterior cleaned; dishwasher run and dishes returned to drawers or shelves
+													<strong>Garbage Bin:</strong> Wiped, bag changed (bag to be supplied by client)
+													<strong>Ventilator:</strong> Dusted</p>
 								</section>
 
 							</div>
