--- a/pricing/index.html
+++ b/pricing/index.html
@@ -59,9 +59,146 @@
 						<header>
 							<h2>Pricing Policy</h3>
 						</header>
-						<p>Pricing is broken down by <strong>Unit Type</strong> below, each unit type having different <strong>Rates</strong> & <strong>Time requirements</strong> for each service.</p>
+						<p id="overide-left-align">Pricing is broken down by <strong>Unit Type</strong> below, each unit type having different <strong>Rates</strong> & <strong>Time requirements</strong> for each service.</p>
 						<p id="overide-left-align"><strong>First Time Standard / First Time Deep:</strong> If needed, we'll add 30 minutes at no additional charge. Beyond that, we charge $10 for each extra 15 minutes.</p>
 						<p id="overide-left-align"><strong>Weekly / Bi-Weekly / Monthly:</strong> 15-minute grace period included. If there's consistent excess work, we can discuss adjusting the rate.</p>
+						<div class="table-container">
+							<table>
+								<thead>
+									<tr>
+										<th><h4><strong>Unit Type</strong></h4></th>
+										<th><h4><strong>First Time Standard</strong></h4></th>
+										<th><h4><strong>First Time Deep</strong></h4></th>
+										<th><h4><strong>Weekly</strong></h4></th>
+										<th><h4><strong>Bi-Weekly</strong></h4></th>
+										<th><h4><strong>Monthly</strong></h4></th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="unit-header">Studio Apartment</td>
+										<td data-label="First Time Standard">$90 - 2 hours</td>
+										<td data-label="First Time Deep">$120 - 3 hours</td>
+										<td data-label="Weekly">$85 - 1 hr 45 min</td>
+										<td data-label="Bi-Weekly">$90 - 2 hours</td>
+										<td data-label="Monthly">$120 - 3 hours</td>
+									</tr>
+									<tr>
+										<td class="unit-header">1 Bedroom, 1 Bathroom</td>
+										<td data-label="First Time Standard">$120 - 3 hours</td>
+										<td data-label="First Time Deep">$160 - 4 hours</td>
+										<td data-label="Weekly">$100 - 2 hrs 30 min</td>
+										<td data-label="Bi-Weekly">$120 - 3 hours</td>
+										<td data-label="Monthly">$150 - 3 hrs 45 min</td>
+									</tr>
+									<tr>
+										<td class="unit-header">1 Bedroom, 1.5 Bathrooms</td>
+										<td data-label="First Time Standard">$140 - 3 hrs 30 min</td>
+										<td data-label="First Time Deep">$160 - 4 hours</td>
+										<td data-label="Weekly">$120 - 3 hours</td>
+										<td data-label="Bi-Weekly">$140 - 3 hrs 30 min</td>
+										<td data-label="Monthly">$160 - 4 hours</td>
+									</tr>
+									<tr>
+										<td class="unit-header">2 Bedroom, 1 Bathroom</td>
+										<td data-label="First Time Standard">$130 - 3 hrs 15 min</td>
+										<td data-label="First Time Deep">$175 - 4 hrs 15 min</td>
+										<td data-label="Weekly">$120 - 3 hours</td>
+										<td data-label="Bi-Weekly">$130 - 3 hrs 15 min</td>
+										<td data-label="Monthly">$160 - 4 hours</td>
+									</tr>
+									<tr>
+										<td class="unit-header">2 Bedroom, 2 Bathrooms</td>
+										<td data-label="First Time Standard">$140 - 3 hrs 30 min</td>
+										<td data-label="First Time Deep">$180 - 4 hrs 30 min</td>
+										<td data-label="Weekly">$130 - 3 hrs 15 min</td>
+										<td data-label="Bi-Weekly">$140 - 3 hrs 30 min</td>
+										<td data-label="Monthly">$170 - 4 hrs 15 min</td>
+									</tr>
+									<tr>
+										<td class="unit-header">2 Bedroom, 2.5 Bathrooms</td>
+										<td data-label="First Time Standard">$160 - 4 hours</td>
+										<td data-label="First Time Deep">$200 - 5 hours</td>
+										<td data-label="Weekly">$140 - 3 hrs 30 min</td>
+										<td data-label="Bi-Weekly">$160 - 4 hours</td>
+										<td data-label="Monthly">$180 - 4 hrs 30 min</td>
+									</tr>
+									<tr>
+										<td class="unit-header">3 Bedroom, 1 Bathroom</td>
+										<td data-label="First Time Standard">$160 - 4 hours</td>
+										<td data-label="First Time Deep">$200 - 5 hours</td>
+										<td data-label="Weekly">$140 - 3 hrs 30 min</td>
+										<td data-label="Bi-Weekly">$160 - 4 hours</td>
+										<td data-label="Monthly">$200 - 5 hours</td>
+									</tr>
+									<tr>
+										<td class="unit-header">3 Bedroom, 1.5 Bathrooms</td>
+										<td data-label="First Time Standard">$180 - 4 hrs 30 min</td>
+										<td data-label="First Time Deep">$240 - 6 hours</td>
+										<td data-label="Weekly">$160 - 4 hours</td>
+										<td data-label="Bi-Weekly">$180 - 4 hrs 30 min</td>
+										<td data-label="Monthly">$200 - 5 hours</td>
+									</tr>
+									<tr>
+										<td class="unit-header">3 Bedroom, 2 Bathrooms</td>
+										<td data-label="First Time Standard">$200 - 5 hours</td>
+										<td data-label="First Time Deep">$260 - 6 hrs 30 min</td>
+										<td data-label="Weekly">$160 - 4 hours</td>
+										<td data-label="Bi-Weekly">$180 - 4 hrs 30 min</td>
+										<td data-label="Monthly">$220 - 5 hrs 30 min</td>
+									</tr>
+									<tr>
+										<td class="unit-header">3 Bedroom, 2.5 Bathrooms</td>
+										<td data-label="First Time Standard">$220 - 5 hrs 30 min</td>
+										<td data-label="First Time Deep">$280 - 7 hours</td>
+										<td data-label="Weekly">$170 - 4 hrs 15 min</td>
+										<td data-label="Bi-Weekly">$200 - 5 hours</td>
+										<td data-label="Monthly">$240 - 6 hours</td>
+									</tr>
+									<tr>
+										<td class="unit-header">3 Bedroom, 3 Bathrooms</td>
+										<td data-label="First Time Standard">$240 - 6 hours</td>
+										<td data-label="First Time Deep">$300 - 7 hrs 15 min</td>
+										<td data-label="Weekly">$180 - 4 hrs 30 min</td>
+										<td data-label="Bi-Weekly">$210 - 5 hrs 15 min</td>
+										<td data-label="Monthly">$250 - 6 hrs 15 min</td>
+									</tr>
+									<tr>
+										<td class="unit-header">4 Bedroom, 1 Bathroom</td>
+										<td data-label="First Time Standard">$180 - 4 hrs 30 min</td>
+										<td data-label="First Time Deep">$220 - 5 hrs 30 min</td>
+										<td data-label="Weekly">$170 - 4 hrs 15 min</td>
+										<td data-label="Bi-Weekly">$180 - 4 hrs 30 min</td>
+										<td data-label="Monthly">$210 - 5 hrs 15 min</td>
+									</tr>
+									<tr>
+										<td class="unit-header">4 Bedroom, 2 Bathrooms</td>
+										<td data-label="First Time Standard">$200 - 5 hours</td>
+										<td data-label="First Time Deep">$260 - 6 hrs 30 min</td>
+										<td data-label="Weekly">$180 - 4 hrs 30 min</td>
+										<td data-label="Bi-Weekly">$200 - 5 hours</td>
+										<td data-label="Monthly">$240 - 6 hours</td>
+									</tr>
+									<tr>
+										<td class="unit-header">4 Bedroom, 2.5 Bathrooms</td>
+										<td data-label="First Time Standard">$220 - 5 hrs 30 min</td>
+										<td data-label="First Time Deep">$280 - 7 hours</td>
+										<td data-label="Weekly">$190 - 4 hrs 45 min</td>
+										<td data-label="Bi-Weekly">$220 - 5 hrs 30 min</td>
+										<td data-label="Monthly">$260 - 6 hrs 30 min</td>
+									</tr>
+									<tr>
+										<td class="unit-header">4 Bedroom, 3 Bathrooms</td>
+										<td data-label="First Time Standard">$240 - 6 hours</td>
+										<td data-label="First Time Deep">$300 - 7 hrs 30 min</td>
+										<td data-label="Weekly">$200 - 5 hours</td>
+										<td data-label="Bi-Weekly">$240 - 6 hours</td>
+										<td data-label="Monthly">$280 - 7 hours</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+
 						<footer>
 							<ul class="buttons">
 								<li><a href="../quote" class="button small">Request a Quote</a></li>
