Footer styling and base color fix

--- a/home/index.html
+++ b/home/index.html
@@ -104,7 +104,7 @@
 									<section>
 										<p href="#" class="image featured"><img src="../images/gelmu5.jpg" alt="" /></p>
 										<header>
-											<h3>Customer Satisfaction</h3>
+											<h3>Customer <strong>Satisfaction</strong></h3>
 										</header>
 										<p>Our dedication to exceptional quality and customer satisfaction is so strong that some clients voluntarily pay more than our asking price. Their generosity allows us to maintain high standards while still offering competitive rates.</p>
 									</section>
@@ -115,7 +115,7 @@
 									<section>
 										<p href="#" class="image featured"><img src="../images/gelmu1.jpg" alt="" /></p>
 										<header>
-											<h3>Qualified Cleaners</h3>
+											<h3><strong>Qualified</strong> Cleaners</h3>
 										</header>
 										<p>We never send an unqualified cleaner alone. If a cleaner doesn’t meet our standards, they assist a lead cleaner, regardless of their prior experience elsewhere.</p>
 									</section>
@@ -128,7 +128,7 @@
 									<section>
 										<p href="#" class="image featured"><img src="../images/gelmu6.jpg" alt="" /></p>
 										<header>
-											<h3>Quality Cleaning</h3>
+											<h3><strong>Quality</strong> Cleaning</h3>
 										</header>
 										<p>Gelmu's Cleaning is a family-owned housekeeping team that takes pride in providing excellent service in New York City. Our customers have trusted us as their weekly, bi-weekly, or monthly home/apartment cleaners for years.</p>
 									</section>
@@ -139,7 +139,7 @@
 									<section>
 										<p href="#" class="image featured"><img src="../images/gelmu2.jpg" alt="" /></p>
 										<header>
-											<h3>Reasonable Prices</h3>
+											<h3><strong>Reasonable</strong> Prices</h3>
 										</header>
 										<p>Our flat rates include the estimated cleaning time plus an additional 30 minutes as a contingency. Most clients don’t incur extra charges; only a few pay more for significant additional work.</p>
 									</section>
@@ -152,7 +152,7 @@
 									<section>
 										<p href="#" class="image featured"><img src="../images/gelmu3.jpg" alt="" /></p>
 										<header>
-											<h3>Realistic Cleaning Timelines</h3>
+											<h3><strong>Realistic</strong> Cleaning Timelines</h3>
 										</header>
 										<p>Our estimated cleaning times are highly realistic. Thanks to thorough training and years of field experience, our cleaners consistently deliver top-notch quality within the allotted time.</p>
 									</section>
@@ -163,7 +163,7 @@
 									<section>
 										<p href="#" class="image featured"><img src="../images/gelmu4.jpg" alt="" /></p>
 										<header>
-											<h3>Trusted by Generations</h3>
+											<h3><strong>Trusted</strong> by Generations</h3>
 										</header>
 										<p>Families across New York City have trusted Gelmu’s Cleaning for decades. Our reputation is built on reliability, consistency, and a personal touch that makes every cleaning feel like a step towards a better home.</p>
 									</section>
@@ -254,7 +254,7 @@
 					</section>
 					<!-- Services -->
 					 <div class="border-top-bot">
-						<h2><strong>Our Services</strong></h2>
+						<h2 class="mb-50"><strong>Our Services</strong></h2>
 						<section class="wrapper style1 container special">
 							<div class="row">
 								<div class="col-4 col-12-narrower">
