--- a/services/index.html
+++ b/services/index.html
@@ -289,7 +289,7 @@
 				</section>
 				<!-- Services -->
 				 <div class="border-top-bot">
-					<h2><strong>Our Services</strong></h2>
+					<h2 class="mb-50"><strong>Our Services</strong></h2>
 					<section class="wrapper style1 container special">
 						<div class="row">
 							<div class="col-4 col-12-narrower">
