Contact form update

--- a/quote/index.html
+++ b/quote/index.html
@@ -56,9 +56,14 @@
 
 					<!-- One -->
 						<section class="wrapper style4 special container medium">
-
 							<!-- Content -->
 							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfgch82UOO7b3KaahCGcJwgw3ZpGS186QplWcKwGGwbZxUW_Q/viewform?embedded=true" width="100%" height="2240" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+							<header>
+								<h4 id="overide-left-align">Pricing Policy</h4>
+							</header>
+							<p id="overide-left-align"><strong>First Time Standard / First Time Deep:</strong> If needed, we'll add 30 minutes at no additional charge. Beyond that, we charge $10 for each extra 15 minutes.</p>
+							<p id="overide-left-align"><strong>Weekly / Bi-Weekly / Monthly:</strong> 15-minute grace period included. If there's consistent excess work, we can discuss adjusting the rate.</p>
+							<a href="../pricing" class="button primary">Pricing Details</a>
 
 						</section>
 
