--- a/policies/index.html
+++ b/policies/index.html
@@ -31,7 +31,17 @@
 								<li><a href="../reviews">Reviews</a></li>
 								<li><a href="#">Policies</a></li>
 								<li><a href="../about">About</a></li>
-								<li><a href="#footer" class="scrolly">Contact</a></li>
+								<li class="submenu">
+										<a href="#">Contact</a>
+										<ul>
+											<li>
+												<a class="no-border" href="tel:+19176931708">&#x260E; (917) 693-1708</a></li>
+											<li>
+												<a  class="no-border" href="mailto:gelmuscleaning@gmail.com">&#x1F4E7; E-mail Us</a>
+											</li>
+											<li><a href="#">&#9993; Request Quote</a></li>
+										</ul>
+									</li>
 							</ul>
 						</li>
 						<li class="specialSubmenu">
