--- a/services/index.html
+++ b/services/index.html
@@ -96,9 +96,9 @@
 										<strong>Bed:</strong> Made
 										<strong>Carpet:</strong> Thoroughly vacuumed
 										<strong>Floor:</strong> Vacuumed & moped
-										<strong>Windows:</strong> Dusted interior
+										<strong>Windows (Interior only):</strong> Dusted interior
 										<strong>Ceiling fan:</strong> No touch
-										<strong>A/C unit:</strong> Dusted & wiped exterior
+										<strong>A/C unit:</strong> Dusted & wiped exterior (Ladder must be provided, if needed to reach unit)
 										<strong>Doors & Door Knops:</strong> Dusted</p>
 										<header id="flex-row">
 											<p><img id="standard-icon" src="../assets/icons/bathroom.png" alt="" /></p>
@@ -127,10 +127,10 @@
 												<strong>Carpets:</strong> Thoroughly vacuumed (top side)
 												<strong>Closets:</strong> Floors vacuumed & moped
 												<strong>TV:</strong> Dusted
-												<strong>Windows:</strong> Interior panes & window ledges dusted
+												<strong>Windows (Interior only):</strong> Interior panes & window ledges dusted
 												<strong>Window treatments (Venetian blinds, drapes):</strong> No touch
 												<strong>Ceiling fan:</strong> No touch
-												<strong>A/C unit:</strong> Exterior of in-room portion of A/C unit dusted
+												<strong>A/C unit:</strong> Exterior of in-room portion of A/C unit dusted (Ladder must be provided, if needed to reach unit)
 												<strong>Doors and Door knobs:</strong> Dusted</p>
 												<header id="flex-row">
 													<p><img id="standard-icon" src="../assets/icons/kitchen.png" alt="" /></p>
@@ -145,7 +145,7 @@
 													<strong>Sink:</strong> Thoroughly washed & dried
 													<strong>Dishwasher:</strong> Exterior wiped
 													<strong>Garbage Bin:</strong> Bag changed (bag to be supplied by client)
-													<strong>Ventilator:</strong> Dusted</p>
+													<strong>Ventilator:</strong> Dusted</p> (Ladder must be provided, if needed to reach ventilator)
 								</section>
 
 							</div>
@@ -176,10 +176,10 @@
 										<strong>Beds:</strong> Make the bed & cleaned under if possible
 										<strong>Carpet:</strong> Thoroughly vacuumed
 										<strong>Floor:</strong> Vacuumed & moped
-										<strong>Windows:</strong> Cleaned Interior
+										<strong>Windows (Interior only):</strong> Cleaned Interior
 										<strong>Ceiling fan:</strong> Dusted & wiped if ladder is provided
-										<strong>A/C unit:</strong> Dusted & wiped
-										<strong>Ventilator:</strong> Dusted
+										<strong>A/C unit:</strong> Dusted & wiped (Ladder must be provided, if needed to reach unit)
+										<strong>Ventilator:</strong> Dusted (Ladder must be provided, if needed to reach ventilator)
 										<strong>Doors & Door Knops:</strong> Dusted & wiped</p>
 										<header id="flex-row">
 											<p><img id="standard-icon" src="../assets/icons/bathroom.png" alt="" /></p>
@@ -189,7 +189,7 @@
 											<strong>Cabinets:</strong> Cleaned inside & out
 											<strong>Bathtub, tiles & sink:</strong> Mildew removed, surfaces washed and dried
 											<strong>Cosmetics supplies:</strong> Removed and cleaned, if requested
-											<strong>Ventilator:</strong> Dusted
+											<strong>Ventilator:</strong> Dusted (Ladder must be provided, if needed to reach ventilator)
 											<strong>Bathroom mirror:</strong> Glass cleaned
 											<strong>Shower glass:</strong> Washed and wiped dry
 											<strong>Shower curtain rod:</strong> Dusted & wiped
@@ -210,10 +210,10 @@
 												<strong>Carpets:</strong> Thoroughly vacuumed (top side, and bottom surfaces of area rugs not larger than 6’ x 8’)
 												<strong>Closets:</strong> Floors vacuumed & moped
 												<strong>TV:</strong> Dusted
-												<strong>Windows:</strong> Interior panes wiped with glass cleaner, window ledges dusted
+												<strong>Windows (Interior only):</strong> Interior panes wiped with glass cleaner, window ledges dusted
 												<strong>Window treatments (Venetian blinds, drapes):</strong> No touch
 												<strong>Ceiling fan:</strong> Dusted if client provides access (appropriate steps to stand on)
-												<strong>A/C unit:</strong> Exterior of in-room portion of A/C unit dusted and wiped
+												<strong>A/C unit:</strong> Exterior of in-room portion of A/C unit dusted and wiped (Ladder must be provided, if needed to reach unit)
 												<strong>Doors and Door knobs:</strong> Dusted and wiped</p>
 												<header id="flex-row">
 													<p><img id="standard-icon" src="../assets/icons/kitchen.png" alt="" /></p>
@@ -228,7 +228,7 @@
 													<strong>Sink:</strong> Thoroughly washed & dried
 													<strong>Dishwasher:</strong> Exterior cleaned; dishwasher run and dishes returned to drawers or shelves
 													<strong>Garbage Bin:</strong> Wiped, bag changed (bag to be supplied by client)
-													<strong>Ventilator:</strong> Dusted</p>
+													<strong>Ventilator:</strong> Dusted (Ladder must be provided, if needed to reach ventilator)</p>
 								</section>
 
 							</div>
@@ -305,7 +305,7 @@
 							<div class="col-4 col-12-narrower">
 
 								<section>
-									<p id="overide-center">Tile & Grout Cleaning</p>
+									<p id="overide-center">Home Cleaning</p>
 									<p id="overide-center">Move In/Move Out Cleaning</p>
 								</section>
 
