--- a/special/index.html
+++ b/special/index.html
@@ -136,7 +136,7 @@
 							<div class="col-4 col-12-narrower">
 
 								<section>
-									<p id="overide-center">Tile & Grout Cleaning</p>
+									<p id="overide-center">Home Cleaning</p>
 									<p id="overide-center">Move In/Move Out Cleaning</p>
 								</section>
 
