--- a/policies/index.html
+++ b/policies/index.html
@@ -68,9 +68,10 @@
 					<section class="wrapper style4 container special">
 						<ol id="overide-left-align">
 							<li>We will re-clean your home free of charge if you notify us within 24 hours that our work was unsatisfactory. Claims made later than 24 hours are subject to approval.</li>
-							<li>For security purposes, and to ensure optimal quality of work, our cleaning crew will consist of two or more people in your home.</li>
+							<li>Whenever possible, we strive to send two or more cleaners to ensure safety, optimal quality, and faster service. Especially for first-time cleanings.</li>
 							<li>We recommend certain cleaning products, but will work with your product preferences. It is up to you to determine and provide the products that we use. If not, we will buy what we consider the appropriate products for your cleaning needs. We generally charge for these supplies at cost, but please keep in mind that we are not a shopping service. If necessary, in our discretion, the amount we charge may include a factor for our time. If you see this as an issue, let’s discuss up front so we can reach an amicable understanding.</li>
 							<li>Initially, if you do not have a vacuum cleaner, we will bring one, but we request that you make your own available for subsequent cleanings.</li>
+							<li>Recurring cleanings, we will try to provide the same cleaner upon request but cannot guarantee it. Rest assured, all our cleaners are expertly trained to Gelmu’s standards and will always have prior experience working in your home.</li>
 						</ol>
 						<footer>
 							<ul class="buttons">
@@ -143,7 +144,7 @@
 							<div class="col-4 col-12-narrower">
 
 								<section>
-									<p id="overide-center">Tile & Grout Cleaning</p>
+									<p id="overide-center">Home Cleaning</p>
 									<p id="overide-center">Move In/Move Out Cleaning</p>
 								</section>
 
