--- a/special/index.html
+++ b/special/index.html
@@ -61,10 +61,15 @@
 					<!-- One -->
 					<section class="wrapper style2 container special">
 						<header>
-							<h2>10% Off all Services</h3>
+							<h2><span id="big-number">10%</span> Off
+							</br>on Any Service</h2>
 						</header>
+						<header>
+							<h3>East Village & West Village
+							</br>service areas only</h3>
+						</header>
+						<p id="overide-center">Mention offer to redeem.</p>
 						<p id="overide-center"><strong>Valid till December 2024.</strong></p>
-						<p id="overide-center">Mention offer while booking.</p>
 						<footer>
 							<ul class="buttons">
 								<li><a href="../quote" class="button small">Request a Quote</a></li>
