--- a/home/index.html
+++ b/home/index.html
@@ -47,7 +47,7 @@
 							<li class="specialSubmenu">
 								<a href="../special">Special Offer</a>
 								<ul>
-									<li><a href="../special">10% Off Any Service</a></li>
+									<li><a href="../special">2024 Holiday Special</a></li>
 								</ul>
 							</li>
 							<li><a href="../quote" class="button primary">Request A Quote</a></li>
