Fix page inconsistencies

--- a/reviews/index.html
+++ b/reviews/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="no-sidebar is-preload">
+	<body class="index is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -215,7 +215,6 @@
 			<script src="../assets/js/jquery.min.js"></script>
 			<script src="../assets/js/jquery.dropotron.min.js"></script>
 			<script src="../assets/js/jquery.scrolly.min.js"></script>
-			<script src="../assets/js/jquery.scrollgress.min.js"></script>
 			<script src="../assets/js/jquery.scrollex.min.js"></script>
 			<script src="../assets/js/browser.min.js"></script>
 			<script src="../assets/js/breakpoints.min.js"></script>
