--- a/services/index.html
+++ b/services/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="contact is-preload">
+	<body class="index is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -145,7 +145,7 @@
 													<strong>Sink:</strong> Thoroughly washed & dried
 													<strong>Dishwasher:</strong> Exterior wiped
 													<strong>Garbage Bin:</strong> Bag changed (bag to be supplied by client)
-													<strong>Ventilator:</strong> Dusted</p> (Ladder must be provided, if needed to reach ventilator)
+													<strong>Ventilator:</strong> Dusted (Ladder must be provided, if needed to reach ventilator)</p>
 								</section>
 
 							</div>
@@ -351,7 +351,6 @@
 			<script src="../assets/js/jquery.min.js"></script>
 			<script src="../assets/js/jquery.dropotron.min.js"></script>
 			<script src="../assets/js/jquery.scrolly.min.js"></script>
-			<script src="../assets/js/jquery.scrollgress.min.js"></script>
 			<script src="../assets/js/jquery.scrollex.min.js"></script>
 			<script src="../assets/js/browser.min.js"></script>
 			<script src="../assets/js/breakpoints.min.js"></script>
