--- a/special/index.html
+++ b/special/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="contact is-preload">
+	<body class="index is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -135,7 +135,7 @@
 				</section>
 				<!-- Services -->
 				 <div class="border-top-bot">
-					<h2><strong>Our Services</strong></h2>
+					<h2 class="mb-50"><strong>Our Services</strong></h2>
 					<section class="wrapper style1 container special">
 						<div class="row">
 							<div class="col-4 col-12-narrower">
@@ -187,7 +187,6 @@
 			<script src="../assets/js/jquery.min.js"></script>
 			<script src="../assets/js/jquery.dropotron.min.js"></script>
 			<script src="../assets/js/jquery.scrolly.min.js"></script>
-			<script src="../assets/js/jquery.scrollgress.min.js"></script>
 			<script src="../assets/js/jquery.scrollex.min.js"></script>
 			<script src="../assets/js/browser.min.js"></script>
 			<script src="../assets/js/breakpoints.min.js"></script>
