--- a/home/index.html
+++ b/home/index.html
@@ -67,7 +67,7 @@
 					<div class="inner">
 
 						<a href="#" class="no-border"
-						><img src="../images/asg-logo.png" alt="" /></a>
+						><img id="main-logo-image" src="../images/asg-logo.png" alt="" /></a>
 						<p>With <strong>Decades of experience,</strong>
 						<br />
 						and <strong>love</strong> for <strong>New York city,</strong>
