Home page rework

--- a/home/index.html
+++ b/home/index.html
@@ -64,23 +64,23 @@
 						automatically wrap lines, so be sure to use line breaks where
 						appropriate (<br />).
 					-->
-					<div class="inner">
+					<div class="inner" id="main-banner">
 
-						<a href="#" class="no-border"
-						><img id="main-logo-image" src="../images/asg-logo.png" alt="" /></a>
-						<p>With <strong>Decades of experience,</strong>
-						<br />
-						and <strong>love</strong> for <strong>New York city,</strong>
-						<br />
-						we are <strong>proud</strong> to be a part
-						<br />
-						of what makes it <strong>shine!</strong></p>
-						<footer>
-							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">Our Promise to you</a></li>
-							</ul>
-						</footer>
-
+						<h1 id="main-title"><strong>Gelmu's Cleaning</strong></h1>
+						<div id="main-banner-text">
+							<p>With <strong>decades of experience,</strong>
+								<br />
+								and <strong>love</strong> for <strong>New York city,</strong>
+								<br />
+								we are <strong>proud</strong> to be a part
+								<br />
+								of what makes it <strong>shine!</strong></p>
+								<footer>
+									<ul class="buttons stacked">
+										<li><a href="#main" class="scrolly" id="main-banner-button">Our Promise to You</a></li>
+									</ul>
+								</footer>
+						</div>
 					</div>
 
 				</section>
